--- a/src/components/footer/footer.css
+++ b/src/components/footer/footer.css
@@ -8,6 +8,10 @@
     margin-top: 50px;
 }
 
+.footer .row .col{
+    font-size: 15px;
+}
+
 ul{
     list-style-type: none;
     padding: 0;
@@ -16,6 +20,7 @@ ul{
 a{
     text-decoration: none;
     color: #000;
+    font-size: 15px;
 }
 
 a:hover {
@@ -28,6 +33,8 @@ ul li{
 
 .footer h3{
     margin-bottom: 20px;
+    font-weight: 800;
+    font-size: 20px;
 }
   
 .icon-shrink {
