--- a/src/style.css
+++ b/src/style.css
@@ -2,7 +2,7 @@
     margin: 0;
     padding: 0px;
     box-sizing: border-box;
-    font-family: "Montserrat", sans-serif;
-    font-optical-sizing: auto;
+    font-family: "Mulish", sans-serif;
+  font-optical-sizing: auto;
     font-style: normal;
 }
