--- a/src/components/product/product.css
+++ b/src/components/product/product.css
@@ -2,6 +2,13 @@
     border: 1px solid #fff;
     border-radius: 10px;
 }
+.card .card-img{
+    text-align: center;
+}
+.card a img{
+    width: 100%;
+    height: 100%;
+}
 .card:hover{
     border: 1px solid #0068C8;
     box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px, rgba(0, 0, 0, 0.23) 0px 3px 6px;
