--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -40,17 +40,26 @@
 .navbar-toggler:hover{
     border: 1px solid #0068C8;
 }
-
+.nav-icon{
+    display: flex;
+}
 .navbar-nav li{
     margin: 0px 10px;
-
 }
 
-.cart-icon span svg{
+.cart-icon span svg, svg.person-icon{
     height:27px;
     width: 27px;
+    margin-right: 30px;
+}
+
+svg.person-icon{
+    margin-right: 10px;
 }
 
 .ant-btn-primary{
     background: #0068C8;
+}
+.person-icon.btn.btn-secondary{
+    padding: 0;
 }
