--- a/src/components/product/product.css
+++ b/src/components/product/product.css
@@ -1,6 +1,7 @@
 .card{
     border: 1px solid #fff;
     border-radius: 10px;
+    text-align: left;
 }
 .card .card-img{
     text-align: center;
@@ -12,6 +13,9 @@
 .card:hover{
     border: 1px solid #0068C8;
     box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px, rgba(0, 0, 0, 0.23) 0px 3px 6px;
+    transform: translateY(-2%);
+    transition: transform .5s;
+
 }
 
 .card-body{
@@ -48,7 +52,7 @@
     margin-left: 10px;
     color: #848484;
     text-decoration: line-through;
-    font-size: 13px;
+    font-size: 12px;
 }
 .btn-add{
     margin: 4px 0 5px;
